@@ -28,7 +28,7 @@ public class AzureResourceGroupMetadataProvider {
     public String getStackName(CloudContext cloudContext) {
         return Splitter.fixedLength(maxResourceNameLength - cloudContext.getId().toString().length())
                 .splitToList(cloudContext.getOriginalName() == null ? cloudContext.getName() : cloudContext.getOriginalName())
-                .get(0) + cloudContext.getId();
+                .getFirst() + cloudContext.getId();
     }
 
     public String getResourceGroupName(CloudContext cloudContext, CloudStack cloudStack) {
